--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.13",
+    "aos": "^2.3.4",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "prop-types": "^15.8.1",
@@ -23,6 +25,7 @@
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "prettier-plugin-tailwindcss": "^0.2.4",
     "tailwindcss": "^3.2.7",
     "vite": "^4.1.0"
   }
